--- a/demo1/package.json
+++ b/demo1/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
