--- a/demo1/package.json
+++ b/demo1/package.json
@@ -17,9 +17,12 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "sass-loader": "^8.0.2",
