--- a/demo2/package.json
+++ b/demo2/package.json
@@ -25,6 +25,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
+    "raw-loader": "^0.5.1",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
