--- a/MPA/package.json
+++ b/MPA/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -37,6 +38,8 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "lib-flexible": "^0.3.2"
+    "lib-flexible": "^0.3.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
