--- a/splitChunks/package.json
+++ b/splitChunks/package.json
@@ -22,7 +22,6 @@
     "cssnano": "^4.1.10",
     "express": "^4.17.1",
     "glob": "^7.1.6",
-    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -39,6 +38,8 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "lib-flexible": "^0.3.2"
+    "lib-flexible": "^0.3.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
