--- a/my-project02/package.json
+++ b/my-project02/package.json
@@ -44,6 +44,7 @@
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.1.4",
+    "terser-webpack-plugin": "^2.3.5",
     "thread-loader": "^2.1.3",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
